<resources>
    <string name="app_name">Licenta2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_acasa">Acasa</string>
    <string name="menu_facturi">Facturi</string>
    <string name="menu_incasari">Incasari</string>
    <string name="menu_clienti">Clienti</string>
    <string name="menu_produse">Produse</string>
    <string name="menu_registru">Registru</string>
    <string name="menu_previziuni">Previziuni</string>
    <string name="menu_setari">Setari</string>
    <string name="picture_prod">picture_prod</string>
    <string name="nume_produs">nume_produs</string>
    <string name="unitate_de_masura">unitate de masura</string>
    <string name="pret_fara_tva">pret fara tva</string>
    <string name="pret_cu_tva">pret cu tva</string>
    <string name="cota_tva">cota tva</string>
    <string name="nume_client">nume client</string>
    <string name="serie">serie</string>
    <string name="data">data</string>
    <string name="data_scadenta">data scadenta</string>
    <string name="data_incasarii">data incasarii</string>
    <string name="status">status</string>
    <string name="suma">suma</string>

    <string-array name="spinnerCotaTVA_items">
        <item>19</item>
        <item>9</item>
        <item>0</item>
    </string-array>

    <string-array name="spinnerClientFactura_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="spinnerTermenDePlata_items">
        <item>7</item>
        <item>14</item>
        <item>21</item>
    </string-array>

    <string-array name="spinnerTipDocument_items">
        <item>Chitanta</item>
        <item>Ordin de plata</item>
        <item>Mandat postal</item>
        <item>Card</item>
        <item>CEC</item>
        <item>Bilet de ordin</item>
        <item>Alta incasare</item>
        <item>Card online</item>
        <item>Extras de cont</item>
        <item>Ramburs</item>


    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parola</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Conectare</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="deconectare">Deconectare</string>
    <string name="comenzi">Comenzi</string>
    <string name="salveaza_client">Salveaza client</string>
    <string name="cif">CIF</string>
    <string name="denumire_client">Denumire client</string>
    <string name="cui">CUI</string>
    <string name="localitate">Localitate</string>
    <string name="judet">Judet</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Telefon</string>
    <string name="nume">Nume</string>
    <string name="email">Email</string>
    <string name="platitor_de_tva">Platitor de TVA</string>
    <string name="salveaza_factura">Salveaza Factura</string>
    <string name="client">Client</string>
    <string name="adresa_livrare">Adresa Livrare</string>
    <string name="data1">Data</string>
    <string name="serie1">Serie</string>
    <string name="termen_de_plata">Termen de plata</string>
    <string name="data_scadenta1">Data scadenta</string>
    <string name="data_livrarii">Data livrarii</string>
    <string name="data_incasarii1">Data incasarii</string>
    <string name="document_intocmit_de">Document intocmit de</string>
    <string name="mentiuni">Mentiuni</string>
    <string name="adauga_produs">+ Adauga Produs</string>
    <string name="adresa_livrare1">Adresa livrare</string>
    <string name="denumire_client1">denumire client</string>
    <string name="adauga_client1">+ Adauga Client</string>
    <string name="salveaza_incasare">Salveaza Incasare</string>
    <string name="client1">Client</string>
    <string name="tip_document">Tip Document</string>
    <string name="valoare">Valoare</string>
    <string name="data2">Data</string>
    <string name="numar_incasare">Numar incasare</string>
    <string name="reprezentand">Reprezentand</string>
    <string name="salveaza_produs">Salveaza Produs</string>
    <string name="denumire_produs">Denumire produs</string>
    <string name="unitate_de_masura1">Unitate de masura</string>
    <string name="pret_unitar1">Pret unitar</string>
    <string name="denumire1">Denumire</string>
    <string name="contine_tva">Contine TVA</string>
    <string name="cota_tva1">Cota TVA</string>
    <string name="adauga_client">Adauga Client</string>
    <string name="adauga_factura">Adauga Factura</string>
    <string name="adauga_incasare">Adauga Incasare</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="inregistrare1">Inregistrare</string>
    <string name="cif1">CIF</string>
    <string name="cui1">CUI</string>
    <string name="conectare_la_un_cont_existent">Conectare la un cont existent</string>
    <string name="conectare">Conectare</string>
    <string name="conectare1">Conectare</string>
    <string name="creeaza_cont">Creeaza cont</string>
    <string name="deconectare1">Deconectare</string>
    <string name="adauga_produs1">Adauga Produs</string>
    <string name="tema_intunecata">Tema intunecata</string>
    <string name="sterge_clientul">Sterge clientul</string>

</resources>