<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/acasaFragment"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_acasa"
            />
        <item
            android:id="@+id/facturiFragment"
            android:icon="@drawable/ic_baseline_payments_24"
            android:title="@string/menu_facturi" />
        <item
            android:id="@+id/incasariFragment"
            android:icon="@drawable/ic_baseline_receipt_24"
            android:title="@string/menu_incasari" />
        <item
            android:id="@+id/clientiFragment"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/menu_clienti" />
        <item
            android:id="@+id/produseFragment"
            android:icon="@drawable/ic_baseline_emoji_objects_24"
            android:title="@string/menu_produse" />
        <item
            android:id="@+id/comenziFragment"
            android:icon="@drawable/ic_baseline_settings_suggest_24"
            android:title="@string/comenzi" />
        <item
            android:id="@+id/registruFragment"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/menu_registru" />
        <item
            android:id="@+id/previziuniFragment"
            android:icon="@drawable/ic_baseline_show_chart_24"
            android:title="@string/menu_previziuni" />
        <item
            android:id="@+id/setariFragment"
            android:icon="@drawable/ic_baseline_settings_suggest_24"
            android:title="@string/menu_setari" />
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/ic_baseline_settings_suggest_24"
            android:title="@string/deconectare" />
    </group>
</menu>